--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VByte</title>
     <!-- Linking CSS -->
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Linking Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,6 +85,6 @@
         <div><img width="48" height="48" src="https://img.icons8.com/color/48/india-circular.png" alt="india-circular"/></div>
     </div>
 
-    <script src="Main.js"></script>
+    <script src="main.js"></script>
 </body> 
 </html>
