--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Endbar -->
     <div  id="endbar1"></div>
     <div id="endbar2">
-        <div><img width="48" height="48" src="https://img.icons8.com/color/48/india-circular.png" alt="india-circular"/></div>
+        <div💸</div>
     </div>
 
     <script src="main.js"></script>
