--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 
     <!-- Endbar -->
     <div  id="endbar1"></div>
-    <div id="endbar2">
-        <div💸</div>
-    </div>
+    <div id="endbar2"></div>
+    <div id="endbar3"></div>
+
 
     <script src="main.js"></script>
 </body> 
