--- a/index.html
+++ b/index.html
@@ -1,90 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VByte</title>
+
     <!-- Linking CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Linking Google Fonts -->
+
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Archivo+Black&family=Bebas+Neue&family=Dancing+Script:wght@400..7000&family=Montserrat:wght@700&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navbar -->
     <div class="nav">
-        <div id="navLogo">
-            <h1>VByte</h1>
-        </div>
-        <div id="navIcons">
-            <div id="a1"><a  href="#about"><h3>About</h3></a></div>
-            <div id="a2"><a style="color: white;" href="#projects"><h3>Projects</h3></a></div>
-            <div id="a3"><a style="color: white;" href="#social"><h3>Social</h3></a></div>
-        </div>
+      <div id="navLogo"><div><img id="logo" src="Stocks/logo.png" alt=""></div> <div id="navButton"><span class="material-symbols-outlined">menu</span></div></div>
+      <div id="navIcons">
+      <div id="a1"><a href="#home">Home</a></div>
+      <div id="a2"><a href="about.html">About</a></div>
+      <div id="a3"><a href="https://github.com/VByte-dev?tab=repositories">Projects</a></div>
+      <div id="a4"><a href="#contact">Contact</a></div>
+      </div>
     </div>
 
-    <!-- About -->
-    <section id="about">
-        <div class="about">
-            <div id="aboutImage">
-                <img id="aboutImg" src="Stocks/VByte.jpg">
-            </div>
-            <div id="aboutText">
-                <h2>🖐️I'm Vedhesh, a 17-year-old aspiring programmer from India, 📍TamilNadu Fueled by a passion for coding, I'm determined to explore the endless possibilities of technology and leave my mark on the global programming scene. Join me as I navigate the exciting world of programming.</h2>
-            </div>
-            <div id="aboutSkills">
-                <div><h1>Current<br>Skills👊</h1></div>
-                <div><img src="Stocks/Skills.jpg" id="aboutSkillsImg" alt="Skills"></div>
-            </div>
-            <div id="end1">
-                <div><a href="#projects"><span class="material-symbols-outlined">arrow_downward</span></a></div>
-            </div>
+    <!-- HomePage -->
+    <section id="home">
+      <div class="home">
+        <div id="homeText">
+          <h1>Want a <b style="background-color: rgb(255, 204, 0); color: black; padding: 0px 3px 0px 3px;">Website</b>  that sizzles more than your favorite <b style="background-color: rgb(255, 204, 0); color: black; padding: 0px 3px 0px 3px; ">Burger?</b> Get a pro site without the pricey bites! Perfect for your business or pet projects. Ready to make your online presence deliciously irresistible? Let's get cookin'!</h1>
+          <div id="homeButton"><div></div>
+          <button class="btn-62"><span style="font-family: monospace;">Grab it</span></button>
         </div>
+
+        <!-- Seperater -->
+        <div class="seperater"></div>
+
+        <!-- Video -->
+        <div id="homeVideo">
+          <div><h1 id="homeVideoText">Elevate <br> Your <br> <b style="background-color: rgb(255, 204, 0);color: black; padding: 0px 10px 0px 10px;">Online</b> Presence.</h1></div>
+          <div id="homeVideoVid"> <div><video style="border-radius: 5px;" src="Stocks/Reel 2.mp4" height="500px" controls autoplay muted loop></video></div>
+        </div>
+      </div>
+       <!-- Seperater -->
+        <div class="seperater">
+          <div id="line"></div>
+          </div>
     </section>
 
-    <!-- Projects -->
-    <section id="projects">
-        <div class="projects">
-            <div id="projectsH1">
-                <div><h1>Take a look✌️<br>at my projects</h1></div>
-            </div>
-            <div id="projectsButton">
-                <div><a href="https://github.com/VByte-dev?tab=repositories"><button id="projectsButtonB">LOOK</button></a></div>
-            </div>
-            <div id="end3">
-                <div><a href="#social"><span style="color: white;" class="material-symbols-outlined">arrow_downward</span></a></div>
-            </div>
-        </div>
-    </section>
+    <!-- Footer -->
+    <section id="contact">
+      <!-- Footer1 -->
+     <div class="footer" style="font-family: monospace;">
+       <div id="f1"><a href="">Instagram</a></div>
+       <div id="f2"><a href="">Github</a></div>
+       <div id="f3"><a href="">Linkedin</a></div>
+     </div>
+     <!-- Footer2 -->
+     <div class="contact">
+       <h1 style="color: black;">Crafted by VByte</h1>
+     </div>
+     </section>
 
-    <!-- Social -->
-    <section id="social">
-        <div class="social">
-            <div id="socialH1">
-                <h1>interact with 👇 me </h1>
-            </div>
-            <div id="socialIcons">
-                <div id="i1"><a href="https://www.instagram.com/vbyte.dev/?next=%2F"><img id="imgIcons" src="Stocks/Social Icons/Instagram.png" alt=""></a></div>
-                <div id="i2"><a href="https://github.com/VByte-dev"><img id="imgIcons" src="Stocks/Social Icons/Github.png" alt=""></a></div>
-                <div id="i3"><a href="https://www.linkedin.com/in/vedhesh-narayanan-m-750a52283/"><img id="imgIcons" src="Stocks/Social Icons/Linkedin.png" alt=""></a></div>
-                <div id="i4"><a href="mailto:vbyte.02@gmail.com"><img id="imgIcons" src="Stocks/Social Icons/Mail.png" alt=""></a></div>
-                <div id="i5"><a href="https://twitter.com/VByteDev"><img id="imgIcons" src="Stocks/Social Icons/Twitter.png" alt=""></a></div>
-            </div>
-            <div id="end2">
-                <div><a href="#about"><span style="color: white;" class="material-symbols-outlined">arrow_upward</span></a></div>
-            </div>
-        </div>
-    </section>
+    <!-- Linking Javascript -->
+    <script src="main.js">
 
-    <!-- Endbar -->
-    <div  id="endbar1"></div>
-    <div id="endbar2"></div>
-    <div id="endbar3"></div>
-
-
-    <script src="main.js"></script>
-</body> 
+    </script>
+  </body>
 </html>
