--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!-- Navbar -->
     <div class="nav">
-      <div id="navLogo"><div><img id="logo" src="Stocks/logo.png" alt=""></div> <div id="navButton"><span class="material-symbols-outlined">menu</span></div></div>
+      <div id="navLogo"><div><img id="logo" src="logo.png" alt=""></div> <div id="navButton"><span class="material-symbols-outlined">menu</span></div></div>
       <div id="navIcons">
       <div id="a1"><a href="#home">Home</a></div>
       <div id="a2"><a href="about.html">About</a></div>
@@ -43,7 +43,7 @@
         <!-- Video -->
         <div id="homeVideo">
           <div><h1 id="homeVideoText">Elevate <br> Your <br> <b style="background-color: rgb(255, 204, 0);color: black; padding: 0px 10px 0px 10px;">Online</b> Presence.</h1></div>
-          <div id="homeVideoVid"> <div><video style="border-radius: 5px;" src="Stocks/Reel 2.mp4" height="500px" controls autoplay muted loop></video></div>
+          <div id="homeVideoVid"> <div><video style="border-radius: 5px;" src="Reel 2.mp4" height="500px" controls autoplay muted loop></video></div>
         </div>
       </div>
        <!-- Seperater -->
