--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
     <!-- Navbar -->
     <div class="nav">
       <div id="navLogo">
-        <div><img id="logo" src="logo.png" alt="" /></div>
+        <div><img id="logo" src="Stocks/logo.png" alt="" /></div>
         <div id="navButton">
           <span class="material-symbols-outlined">menu</span>
         </div>
       </div>
       <div id="navIcons">
-        <div id="a1"><a href="index.html">Home</a></div>
+        <div id="a1"><a href="Stocks/index.html">Home</a></div>
         <div id="a2"><a href="#about">About</a></div>
         <div id="a3">
           <a href="https://github.com/VByte-dev?tab=repositories">Projects</a>
@@ -45,7 +45,7 @@
       <!-- Intro -->
       <div class="about">
         <div id="aboutContent">
-          <img id="title1" src="Intro1.png" alt="" />
+          <img id="title1" src="Stocks/Intro1.png" alt="" />
           <p>
             I'm a 17-year-old aspiring programmer from Tamil Nadu, India. Fueled
             by a passion for coding, I'm dedicated to exploring the endless
@@ -63,7 +63,7 @@
       <!-- My Journey -->
       <div class="about">
         <div id="aboutContent">
-          <img id="title2" src="Journey.png" alt="" />
+          <img id="title2" src="Stocks/Journey.png" alt="" />
           <p>
             My journey into the world of programming began when I was introduced
             to computers at a young age. Fascinated by how software can
@@ -79,7 +79,7 @@
 
       <div class="about">
         <div id="aboutContent">
-          <img id="title3" src="Aspiration.png" alt="" />
+          <img id="title3" src="Stocks/Aspiration.png" alt="" />
           <p>
             My ultimate goal is to become a leading programmer and contribute to
             the tech community in a meaningful way. I aspire to work on
