--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div id="navIcons">
-        <div id="a1"><a href="Stocks/index.html">Home</a></div>
+        <div id="a1"><a href="index.html">Home</a></div>
         <div id="a2"><a href="#about">About</a></div>
         <div id="a3">
           <a href="https://github.com/VByte-dev?tab=repositories">Projects</a>
