--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="homeText">
           <h1>Want a <b style="background-color: rgb(255, 204, 0); color: black; padding: 0px 3px 0px 3px;">Website</b>  that sizzles more than your favorite <b style="background-color: rgb(255, 204, 0); color: black; padding: 0px 3px 0px 3px; ">Burger?</b> Get a pro site without the pricey bites! Perfect for your business or pet projects. Ready to make your online presence deliciously irresistible? Let's get cookin'!</h1>
           <div id="homeButton"><div></div>
-          <button class="btn-62"><span style="font-family: monospace;">Grab it</span></button>
+          <a href="https://www.instagram.com/direct/t/17849039201990206"><button class="btn-62"><span style="font-family: monospace;">Grab it</span></button></a>
         </div>
 
         <!-- Seperater -->
@@ -56,9 +56,9 @@
     <section id="contact">
       <!-- Footer1 -->
      <div class="footer" style="font-family: monospace;">
-       <div id="f1"><a href="">Instagram</a></div>
-       <div id="f2"><a href="">Github</a></div>
-       <div id="f3"><a href="">Linkedin</a></div>
+       <div id="f1"><a href="https://www.instagram.com/vbyte.dev/">Instagram</a></div>
+       <div id="f2"><a href="https://github.com/VByte-dev">Github</a></div>
+       <div id="f3"><a href="https://www.linkedin.com/in/vedhesh-narayanan-m-750a52283/?originalSubdomain=in">Linkedin</a></div>
      </div>
      <!-- Footer2 -->
      <div class="contact">
