--- a/about.html
+++ b/about.html
@@ -98,9 +98,9 @@
     <section id="contact">
      <!-- Footer1 -->
     <div class="footer" style="font-family: monospace;">
-      <div id="f1"><a href="">Instagram</a></div>
-      <div id="f2"><a href="">Github</a></div>
-      <div id="f3"><a href="">Linkedin</a></div>
+       <div id="f1"><a href="https://www.instagram.com/vbyte.dev/">Instagram</a></div>
+       <div id="f2"><a href="https://github.com/VByte-dev">Github</a></div>
+       <div id="f3"><a href="https://www.linkedin.com/in/vedhesh-narayanan-m-750a52283/?originalSubdomain=in">Linkedin</a></div>
     </div>
     <!-- Footer2 -->
     <div class="contact">
