--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="homeText">
           <h1>Want a <b style="background-color: rgb(255, 204, 0); color: black; padding: 0px 3px 0px 3px;">Website</b>  that sizzles more than your favorite <b style="background-color: rgb(255, 204, 0); color: black; padding: 0px 3px 0px 3px; ">Burger?</b> Get a pro site without the pricey bites! Perfect for your business or pet projects. Ready to make your online presence deliciously irresistible? Let's get cookin'!</h1>
           <div id="homeButton"><div></div>
-          <a href="https://www.instagram.com/direct/t/17849039201990206"><button class="btn-62"><span style="font-family: monospace;">Grab it</span></button></a>
+         <button class="btn-62"><a href="https://www.instagram.com/vbyte.dev/"><span style="font-family: monospace;"> Grab it</span></a></button>
         </div>
 
         <!-- Seperater -->
